<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:showIn="@layout/activity_main"
    tools:context=".fragment.JoinGroupFragment"
    android:orientation="vertical">

  <EditText android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/group_code"
            android:hint="@string/group_code"
            android:inputType="number"/>
  <EditText android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/group_password"
            android:hint="@string/group_password_optional"
            android:inputType="textPassword"/>

  <Button android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:text="@string/join_group"
          android:id="@+id/btn_join_group"/>

  <Button android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:text="@string/create_group"
          android:id="@+id/btn_create_group"/>

</LinearLayout>