<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              tools:context=".fragment.CreateGroupFragment" android:orientation="vertical">

  <EditText android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/group_name"
            android:hint="@string/group_name"
            android:inputType="text"
            android:maxLength="32"/>

  <EditText android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/group_password"
            android:maxLength="12"
            android:hint="@string/group_password_optional"
            android:inputType="textPassword"/>

  <Button android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:text="@string/create"
          android:id="@+id/btn_create_group"/>

</LinearLayout>