<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".fragment.JoinGroupFragment"
    tools:showIn="@layout/activity_main">

    <ProgressBar
        android:id="@+id/join_group_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/join_group_form"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/group_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/group_code"
            android:inputType="number" />

        <EditText
            android:id="@+id/group_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/group_password_optional"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/btn_join_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/join_group" />

        <Button
            android:id="@+id/btn_create_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/create_group" />
    </LinearLayout>
</LinearLayout>